k8s/manifests-64b461/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-64b461
  namespace: journee
  labels:
    app: journee-64b461
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-64b461
  template:
    metadata:
      labels:
        app: journee-64b461
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-64b461
          image: gcr.io/my-docker-471807/journee:64b461-1fd270
          ports:
            - containerPort: 3000
