k8s/manifests-64b461/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-64b461
  namespace: journee
spec:
  selector:
    app: journee-64b461
  ports:
    - port: 80
      targetPort: 3000
